add_library(rocksdb_util
                arena.cc
                auto_roll_logger.cc
                bloom.cc
                benchharness.cc
#                build_version_$(Configuration).cc
                cache.cc
                coding.cc
                comparator.cc
                crc32c.cc
                db_info_dumper.cc
                dynamic_bloom.cc
                env.cc
                env_hdfs.cc
                file_util.cc
                filter_policy.cc
                hash.cc
                hash_cuckoo_rep.cc
                hash_linklist_rep.cc
                hash_skiplist_rep.cc
                histogram.cc
                instrumented_mutex.cc
                iostats_context.cc
                ldb_cmd.cc
                ldb_tool.cc
                logging.cc
                log_buffer.cc
                memenv.cc
                mock_env.cc
                murmurhash.cc
                mutable_cf_options.cc
                options.cc
                options_builder.cc
                options_helper.cc
                perf_context.cc
                rate_limiter.cc
                skiplistrep.cc
                slice.cc
                sst_dump_tool.cc
                statistics.cc
                status.cc
                string_util.cc
                sync_point.cc
                testharness.cc
                testutil.cc
                thread_status_impl.cc
                thread_status_updater.cc
                thread_status_updater_debug.cc
                thread_status_util.cc
                thread_status_util_debug.cc
                vectorrep.cc
                xfunc.cc
                xxhash.cc
                thread_local.cc
            )
